--- a/pom.xml
+++ b/pom.xml
@@ -4,21 +4,52 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>embedded-cassandra</artifactId>
+    <groupId>com.nikitaaero</groupId>
+    <artifactId>embedded-cassandra-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <versions.jmh>1.32</versions.jmh>
+        <versions.cassandra>4.0.1</versions.cassandra>
+        <versions.cassandra-driver>4.13.0</versions.cassandra-driver>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.cassandra</groupId>
-            <artifactId>cassandra-all</artifactId>
-            <version>4.0.1</version>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>embedded-cassandra</module>
+        <module>benchmark-cassandra</module>
+    </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.apache.cassandra</groupId>
+                <artifactId>cassandra-all</artifactId>
+                <version>${versions.cassandra}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.datastax.oss</groupId>
+                <artifactId>java-driver-core</artifactId>
+                <version>${versions.cassandra-driver}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.datastax.oss</groupId>
+                <artifactId>java-driver-query-builder</artifactId>
+                <version>${versions.cassandra-driver}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjdk.jmh</groupId>
+                <artifactId>jmh-core</artifactId>
+                <version>${versions.jmh}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjdk.jmh</groupId>
+                <artifactId>jmh-generator-annprocess</artifactId>
+                <version>${versions.jmh}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
